--- a/index.html
+++ b/index.html
@@ -161,6 +161,23 @@
             alert("Could not fetch transcript. Try again later.");
         });
 });
+    // Fetch transcript from API Gateway and display it
+document.getElementById('fetchTranscript').addEventListener('click', () => {
+    fetch("https://3m1lblyoj5.execute-api.ap-southeast-2.amazonaws.com/stg/transcript")
+        .then(response => {
+            if (!response.ok) {
+                throw new Error("Failed to fetch transcript");
+            }
+            return response.json();
+        })
+        .then(data => {
+            document.getElementById('transcriptBox').value = data.transcript;
+        })
+        .catch(error => {
+            console.error("Error:", error);
+            alert("Could not fetch transcript. Try again later.");
+        });
+});
 
     </script>
 </body>
