--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             }
 
             function triggerTranscription() {
+                 alert('fetch transcript');
                 fetch("https://3m1lblyoj5.execute-api.ap-southeast-2.amazonaws.com/stg/transcript", {
                     method: "POST"
                 })
