--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 });
             }
 
-            function triggerTranscription() {
-                 alert('fetch transcript');
+           function triggerTranscription() {
+                alert('Starting transcription job...');
                 fetch("https://3m1lblyoj5.execute-api.ap-southeast-2.amazonaws.com/stg/transcript", {
                     method: "POST"
                 })
