--- a/index.html
+++ b/index.html
@@ -1,170 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Dr-Inovates</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dr-Inovates Real-time Transcription</title>
+  <script src="https://sdk.amazonaws.com/js/aws-sdk-2.947.0.min.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f4f4f4; }
+    h1 { color: #333; }
+    textarea { width: 100%; height: 200px; margin-top: 10px; font-size: 16px; }
+    button { padding: 10px 20px; margin: 5px; }
+  </style>
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <img src="pic1.jpeg" alt="Dr-Inovates Logo" style="width: 100%; height: auto;">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <h1>Dr-Inovates Real-time Transcription</h1>
+  <button id="startTranscription">Start Transcription</button>
+  <button id="stopTranscription" disabled>Stop Transcription</button>
+  <textarea id="transcriptBox" readonly placeholder="Live transcription will appear here..."></textarea>
 
-    <main>
-        <!-- Voice Recording Section -->
-        <section id="voice-recording">
-            <h2>Voice Recording</h2>
-            <button id="startRecord">Start Recording</button>
-            <button id="stopRecord" disabled>Stop Recording</button>
-            <button id="playRecord" disabled>Play Recording</button>
-            <br><br>
-            <audio id="audioPlayer" controls></audio>
-        </section>
+  <script type="module">
+    import { startMicrophoneTranscription } from 'https://cdn.jsdelivr.net/npm/amazon-transcribe-websocket-client/browser/index.js';
 
-        <!-- Transcript Display Section -->
-        <section id="transcript-display">
-            <h2>Transcript</h2>
-            <textarea id="transcriptBox" rows="8" cols="80" readonly placeholder="Transcript will appear here..."></textarea>
-            <br>
-            <button id="fetchTranscript">Get Transcript</button>
-        </section>
-    </main>
+    const region = 'ap-southeast-2';
+    const identityPoolId = 'ap-southeast-2:4fab4693-33c5-4ba7-923e-6a1b1b9e1f4b';
+    const languageCode = 'en-US';
 
-    <footer>
-        <p>&copy; 2025 Dr-Inovates. All rights reserved.</p>
-    </footer>
+    AWS.config.region = region;
+    AWS.config.credentials = new AWS.CognitoIdentityCredentials({ IdentityPoolId: identityPoolId });
 
-    <!-- AWS SDK & JavaScript Logic -->
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.947.0.min.js"></script>
-    <script>
-        window.onload = function () {
-            // AWS Configuration
-            AWS.config.update({
-                region: 'ap-southeast-2',
-                credentials: new AWS.CognitoIdentityCredentials({
-                    IdentityPoolId: 'ap-southeast-2:4fab4693-33c5-4ba7-923e-6a1b1b9e1f4b'
-                })
-            });
+    const startBtn = document.getElementById('startTranscription');
+    const stopBtn = document.getElementById('stopTranscription');
+    const transcriptBox = document.getElementById('transcriptBox');
 
-            const s3 = new AWS.S3();
-            const startRecordBtn = document.getElementById('startRecord');
-            const stopRecordBtn = document.getElementById('stopRecord');
-            const playRecordBtn = document.getElementById('playRecord');
-            const audioPlayer = document.getElementById('audioPlayer');
-            let mediaRecorder;
-            let audioChunks = [];
+    let controller;
 
-            // Start Recording
-            startRecordBtn.addEventListener('click', () => {
-                audioChunks = [];
-                navigator.mediaDevices.getUserMedia({ audio: true })
-                    .then(stream => {
-                        mediaRecorder = new MediaRecorder(stream);
-                        mediaRecorder.ondataavailable = event => {
-                            audioChunks.push(event.data);
-                        };
-                        mediaRecorder.onstop = () => {
-                            const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
-                            const audioUrl = URL.createObjectURL(audioBlob);
-                            audioPlayer.src = audioUrl;
-                            uploadAudioToS3(audioBlob);
-                        };
-                        mediaRecorder.start();
-                        startRecordBtn.disabled = true;
-                        stopRecordBtn.disabled = false;
-                        playRecordBtn.disabled = true;
-                    })
-                    .catch(error => {
-                        console.error('Error accessing the microphone:', error);
-                    });
-            });
+    startBtn.onclick = async () => {
+      startBtn.disabled = true;
+      stopBtn.disabled = false;
+      transcriptBox.value = '';
 
-            // Stop Recording
-            stopRecordBtn.addEventListener('click', () => {
-                mediaRecorder.stop();
-                startRecordBtn.disabled = false;
-                stopRecordBtn.disabled = true;
-                playRecordBtn.disabled = false;
-            });
+      await AWS.config.credentials.getPromise();
+      const credentials = AWS.config.credentials;
 
-            // Play the Recorded Audio
-            playRecordBtn.addEventListener('click', () => {
-                audioPlayer.play();
-            });
+      controller = await startMicrophoneTranscription({
+        region,
+        credentials,
+        languageCode,
+        onTranscription: (transcription) => {
+          transcriptBox.value = transcription;
+        },
+        onError: (err) => {
+          console.error('Transcribe Error:', err);
+          alert('Error in real-time transcription');
+          startBtn.disabled = false;
+          stopBtn.disabled = true;
+        }
+      });
+    };
 
-            // Upload audio to S3 and auto-start transcription
-            function uploadAudioToS3(audioBlob) {
-                const params = {
-                    Bucket: 'pm-dr-inovates-audio',
-                    Key: 'audio/latest-recording.wav',
-                    Body: audioBlob,
-                    ContentType: 'audio/wav',
-                };
-
-                console.log("Uploading to S3...");
-                s3.upload(params, function(err, data) {
-                    if (err) {
-                        console.error('Error uploading file:', err);
-                    } else {
-                        console.log('File uploaded successfully:', data);
-                        alert('Audio uploaded to S3 successfully!');
-                        triggerTranscription(); // Auto-start transcription
-                    }
-                });
-            }
-
-           function triggerTranscription() {
-                alert('Starting transcription job...');
-                fetch("https://3m1lblyoj5.execute-api.ap-southeast-2.amazonaws.com/stg/transcript", {
-                    method: "POST"
-                })
-                .then(response => response.json())
-                .then(data => {
-                    console.log("Transcription job started:", data);
-                    alert("Transcription job started.");
-                })
-                .catch(error => {
-                    console.error("Failed to start transcription:", error);
-                    alert("Failed to trigger transcription.");
-                });
-            }
-
-   document.getElementById('fetchTranscript').addEventListener('click', () => {
-                fetch("https://3m1lblyoj5.execute-api.ap-southeast-2.amazonaws.com/stg/transcript")
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error("Failed to fetch transcript");
-                        }
-                        return response.json();
-                    })
-                    .then(data => {
-                        let transcript = data.transcript;
-                        if (!transcript && data.body) {
-                            try {
-                                const body = JSON.parse(data.body);
-                                transcript = body.transcript;
-                            } catch (e) {
-                                console.error("Error parsing body:", e);
-                            }
-                        }
-                        document.getElementById('transcriptBox').value = transcript || "No transcript found.";
-                    })
-                    .catch(error => {
-                        console.error("Error:", error);
-                        alert("Could not fetch transcript. Try again later.");
-                    });
-            });
-        };
-    </script>
+    stopBtn.onclick = () => {
+      if (controller && controller.stop) controller.stop();
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
+    };
+  </script>
 </body>
 </html>
