--- a/index.html
+++ b/index.html
@@ -20,38 +20,17 @@
     </header>
 
     <main>
-        <section id="home">
-            <h1>Welcome to Dr-Inovates</h1>
-            <p>Your trusted partner in innovative medical solutions.</p>
-        </section>
-
-        <section id="about">
-            <h2>About Dr-Inovates</h2>
-            <p>Learn more about the doctor and the mission of Dr-Inovates.</p>
-        </section>
-
-        <section id="services">
-            <h2>Our Services</h2>
-            <p>Discover the services we offer to enhance your medical experience.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-                <textarea name="message" id="message" rows="4" placeholder="Your message"></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-
         <section id="voice-recording">
             <h2>Voice Recording</h2>
-            <button id="startStream">Start Real-Time Transcription</button>
-            <button id="stopStream" disabled>Stop</button>
-            <textarea id="liveTranscript" rows="10" cols="80" readonly placeholder="Real-time transcript will appear here..."></textarea>
+            <button id="startRecord">Start Recording</button>
+            <button id="stopRecord" disabled>Stop Recording</button>
+            <button id="playRecord" disabled>Play Recording</button>
+            <br><br>
+            <audio id="audioPlayer" controls></audio>
+            <div>
+                <h3>Real-Time Transcript</h3>
+                <textarea id="realTimeTranscript" rows="8" cols="80" readonly placeholder="Real-time transcript will appear here..."></textarea>
+            </div>
         </section>
     </main>
 
@@ -60,67 +39,108 @@
     </footer>
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.947.0.min.js"></script>
-    <script src="https://unpkg.com/microphone-stream@6.1.0/dist/microphone-stream.min.js"></script>
     <script>
         AWS.config.region = 'ap-southeast-2';
         AWS.config.credentials = new AWS.CognitoIdentityCredentials({
             IdentityPoolId: 'ap-southeast-2:e1961e14-083d-4200-bb2b-c869a5ffbc3d'
         });
 
-        let micStream = null;
-        let socket;
+        const s3 = new AWS.S3();
+        const startRecordBtn = document.getElementById('startRecord');
+        const stopRecordBtn = document.getElementById('stopRecord');
+        const playRecordBtn = document.getElementById('playRecord');
+        const audioPlayer = document.getElementById('audioPlayer');
+        const transcriptBox = document.getElementById('realTimeTranscript');
+        let mediaRecorder, audioChunks = [], stream;
+        let transcribeSocket;
 
-        document.getElementById('startStream').addEventListener('click', async () => {
-            document.getElementById('startStream').disabled = true;
-            document.getElementById('stopStream').disabled = false;
+        startRecordBtn.addEventListener('click', async () => {
+            audioChunks = [];
+            stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+            mediaRecorder = new MediaRecorder(stream);
 
-            const mic = await navigator.mediaDevices.getUserMedia({ video: false, audio: true });
-            micStream = new MicrophoneStream();
-            micStream.setStream(mic);
-
-            const creds = await AWS.config.credentials.getPromise();
-            const url = `wss://transcribestreaming.${AWS.config.region}.amazonaws.com:8443/stream-transcription-websocket?language-code=en-US&media-encoding=pcm&sample-rate=16000&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=${encodeURIComponent(creds.accessKeyId + '/' + AWS.util.date.getDate(new Date()) + '/' + AWS.config.region + '/transcribe/aws4_request')}&X-Amz-Date=${AWS.util.date.iso8601(new Date()).replace(/[:\-]/g, '').replace(/\..+/, '')}&X-Amz-SignedHeaders=host&X-Amz-Security-Token=${encodeURIComponent(creds.sessionToken)}`;
-
-            socket = new WebSocket(url);
-            socket.binaryType = 'arraybuffer';
-
-            socket.onopen = () => {
-                const reader = micStream.getAudioStream().getReader();
-                const pcmEncode = raw => {
-                    const input = MicrophoneStream.toRaw(raw);
-                    const buffer = new ArrayBuffer(input.length * 2);
-                    const view = new DataView(buffer);
-                    for (let i = 0; i < input.length; i++) view.setInt16(i * 2, input[i] * 0x7FFF, true);
-                    return buffer;
-                };
-                const sendPCM = async () => {
-                    while (true) {
-                        const { done, value } = await reader.read();
-                        if (done || socket.readyState !== 1) break;
-                        if (value) socket.send(pcmEncode(value));
-                    }
-                };
-                sendPCM();
+            mediaRecorder.ondataavailable = event => audioChunks.push(event.data);
+            mediaRecorder.onstop = () => {
+                const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
+                audioPlayer.src = URL.createObjectURL(audioBlob);
+                uploadAudioToS3(audioBlob);
+                stopTranscription();
             };
 
-            socket.onmessage = message => {
-                const data = JSON.parse(new TextDecoder('utf-8').decode(message.data));
-                const results = data.Transcript?.Results;
-                if (results?.length > 0 && results[0].Alternatives.length > 0) {
+            startTranscription(stream);
+            mediaRecorder.start();
+            startRecordBtn.disabled = true;
+            stopRecordBtn.disabled = false;
+            playRecordBtn.disabled = true;
+        });
+
+        stopRecordBtn.addEventListener('click', () => {
+            mediaRecorder.stop();
+            stream.getTracks().forEach(track => track.stop());
+            startRecordBtn.disabled = false;
+            stopRecordBtn.disabled = true;
+            playRecordBtn.disabled = false;
+        });
+
+        playRecordBtn.addEventListener('click', () => audioPlayer.play());
+
+        function uploadAudioToS3(audioBlob) {
+            const params = {
+                Bucket: 'pm-chatgpt-test',
+                Key: 'audio/latest-recording.wav',
+                Body: audioBlob,
+                ContentType: 'audio/wav',
+            };
+
+            s3.upload(params, function(err, data) {
+                if (err) console.log('Error uploading:', err);
+                else console.log('Uploaded:', data);
+            });
+        }
+
+        async function startTranscription(stream) {
+            const credentials = await AWS.config.credentials.getPromise();
+            const accessKeyId = AWS.config.credentials.accessKeyId;
+            const secretAccessKey = AWS.config.credentials.secretAccessKey;
+            const sessionToken = AWS.config.credentials.sessionToken;
+
+            const endpoint = `wss://transcribestreaming.${AWS.config.region}.amazonaws.com:8443/stream-transcription-websocket?language-code=en-US&media-encoding=pcm&sample-rate=44100&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=${encodeURIComponent(accessKeyId + '/' + AWS.util.date.iso8601(new Date()).substring(0, 10) + '/' + AWS.config.region + '/transcribe/aws4_request')}&X-Amz-Date=${AWS.util.date.iso8601(new Date()).replace(/[:-]|\.\d{3}/g, '')}&X-Amz-Security-Token=${encodeURIComponent(sessionToken)}`;
+
+            transcribeSocket = new WebSocket(endpoint);
+            transcribeSocket.binaryType = 'arraybuffer';
+            transcribeSocket.onopen = () => {
+                const audioCtx = new AudioContext();
+                const input = audioCtx.createMediaStreamSource(stream);
+                const processor = audioCtx.createScriptProcessor(4096, 1, 1);
+                processor.onaudioprocess = e => {
+                    const inputData = e.inputBuffer.getChannelData(0);
+                    const pcmEncoded = new Int16Array(inputData.length);
+                    for (let i = 0; i < inputData.length; i++) {
+                        pcmEncoded[i] = inputData[i] * 32767;
+                    }
+                    transcribeSocket.send(pcmEncoded.buffer);
+                };
+                input.connect(processor);
+                processor.connect(audioCtx.destination);
+            };
+
+            transcribeSocket.onmessage = event => {
+                const message = JSON.parse(new TextDecoder('utf-8').decode(event.data));
+                const results = message.Transcript.Results;
+                if (results && results.length > 0 && results[0].Alternatives.length > 0) {
                     const transcript = results[0].Alternatives[0].Transcript;
                     if (!results[0].IsPartial) {
-                        document.getElementById('liveTranscript').value += transcript + '\n';
+                        transcriptBox.value += transcript + '\n';
                     }
                 }
             };
-        });
+        }
 
-        document.getElementById('stopStream').addEventListener('click', () => {
-            micStream.stop();
-            if (socket && socket.readyState === 1) socket.close();
-            document.getElementById('stopStream').disabled = true;
-            document.getElementById('startStream').disabled = false;
-        });
+        function stopTranscription() {
+            if (transcribeSocket && transcribeSocket.readyState === WebSocket.OPEN) {
+                transcribeSocket.close();
+            }
+        }
     </script>
 </body>
 </html>
